# airtips

./: .gitignore  Cargo.toml  Dockerfile.backend  airtips_config-template.toml
.sqlx/: query-32b6d3568abaac8deca7b0e9f6cde99550b3a28ec304adbd86607d23ac80152b.json  query-5ca8daa597f886064651fe06da71a0787b809a9c78967de99b5209c787a8235b.json  query-8bf7b7d9f4fd3eef5ce5c62b8f2f758562f73bc827a33c9da25c0929d310b49b.json  query-a6d7a8ef0107b8b7d1ab04da91baeddaf26234a04177ab1616e081c9ed356636.json
backend/: Cargo.toml  README.md  env.template
backend/migrations/: 20251126174351_song_history.sql
backend/src/: config.rs  main.rs
backend/src/middleware/: jwt.rs
backend/src/routes/: mod.rs  songs.rs
cli_client/: Cargo.toml
cli_client/src/: main.rs
