[workspace]
resolver = "3"
members = [
"backend/", "cli_client"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = 3 # Use all optimizations for best performance
strip = true # Remove debug symbols
