[package]
name = "airtips_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1", features = ["full"]}
axum = {version = "0.8.7"}
axum-extra = {version = "0.12.2", features = ["typed-header"]}
axum-server = {version = "0.7.3", features = ["tls-rustls"]}
hyper = {version = "1.8.0"}
hyper-tls = "0.6.0"
tower-http = { version = "0.6.6", features = ["cors"]}
tower = "0.5.2"
rustls = { version = "0.23.35", features = ["ring"] }
ring = "0.17.14"
reqwest = {version = "0.12"}
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1", features = ["raw_value"]}
sha2 = {version = "0.10.9"}
sqlx = {version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "migrate",
  "json",
  "time",
  "uuid"]}
uuid = {version = "1.18.1", features = ["v4", "serde"]}
time = "0.3.44"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"] }
dotenvy = "0.15.7"
constant_time_eq = "0.4.2"
regex = "1"
scraper = "0.24"
aes-gcm = "0.10"
aes = "0.8.4"
rand = "0.9"
base64 = "0.22"
once_cell = "1.21"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }


[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = 3 # Use all optimizations for best performance
strip = true # Remove debug symbols
