[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
axum.workspace = true
axum-extra = {workspace = true, features = ["typed-header"]}
axum-server = {workspace = true}
hyper.workspace = true
hyper-tls.workspace = true
tower-http.workspace = true
tower.workspace = true
rustls = {workspace = true, features = ["ring"]}
ring.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"]  }

sha2.workspace = true
sqlx = { workspace = true, features = [
  "runtime-tokio-rustls",
  "postgres",
  "migrate",
  "json",
  "time",
  "uuid"]}
uuid.workspace = true
time.workspace = true
jsonwebtoken.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

dotenvy.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
